argo-events/argo-webhook-gw.yaml
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: webhook-gateway
  labels:
    # gateway controller with instanceId "argo-events" will process this gateway
    gateways.argoproj.io/gateway-controller-instanceid: argo-events
spec:
  replica: 1
  type: webhook
  eventSourceRef:
    name: webhook-event-source
  template:
    metadata:
      name: webhook-gateway
      labels:
        gateway-name: webhook-gateway
    spec:
      containers:
        - name: gateway-client
          image: argoproj/gateway-client:v0.12
          imagePullPolicy: Always
          command: ["/bin/gateway-client"]
        - name: webhook-events
          image: argoproj/webhook-gateway:v0.12
          imagePullPolicy: Always
          command: ["/bin/webhook-gateway"]
      #     volumeMounts:
      #     - mountPath: /etc/ssl/certs/gitlab-cert.crt
      #       subPath: gitlab-cert.crt
      #       name: gitlab-cert
      #     - mountPath: /etc/ssl/certs/vballin-ca.crt
      #       subPath: vballin-ca.crt
      #       name: gitlab-cert
      # volumes:
      # - name: gitlab-cert
      #   secret:
      #     defaultMode: 420
      #     secretName: gitlab-cert
      serviceAccountName: argo-events-sa
  service:
    metadata:
      name: webhook-gateway-svc
    spec:
      selector:
        gateway-name: webhook-gateway
      ports:
        - port: 12000
          targetPort: 12000
      type: LoadBalancer
  subscribers:
    http:
      - "http://webhook-sensor.argo.svc:9300/"
